[gd_scene load_steps=28 format=2]

[ext_resource path="res://Hostiles/Waves/WaveBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Stages/Level10/FederationBoss.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/DecisionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Stages/Level10/FinalBossDecisionWave.gd" type="Script" id=6]
[ext_resource path="res://Space Shooter Redux/Bonus/kenvector_future.ttf" type="DynamicFontData" id=7]

[sub_resource type="VisualShaderNodeTexture" id=1]
source = 2

[sub_resource type="VisualShaderNodeScalarUniform" id=2]
uniform_name = "WhiteAlpha"

[sub_resource type="VisualShaderNodeVectorInterp" id=3]

[sub_resource type="VisualShaderNodeInput" id=4]
input_name = "uv"

[sub_resource type="VisualShader" id=5]
code = "shader_type canvas_item;
uniform float WhiteAlpha;



void vertex() {
// Output:0

}

void fragment() {
// Input:8
	vec3 n_out8p0 = vec3(UV, 0.0);

// Texture:11
	vec3 n_out11p0;
	float n_out11p1;
	{
		vec4 _tex_read = texture(TEXTURE, n_out8p0.xy);
		n_out11p0 = _tex_read.rgb;
		n_out11p1 = _tex_read.a;
	}

// ScalarUniform:5
	float n_out5p0 = WhiteAlpha;

// VectorMix:6
	vec3 n_in6p1 = vec3(1.00000, 1.00000, 1.00000);
	vec3 n_out6p0 = mix(n_out11p0, n_in6p1, vec3(n_out5p0));

// Output:0
	COLOR.rgb = n_out6p0;
	COLOR.a = n_out11p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -589.697, 75 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 260, 180 )
nodes/fragment/5/node = SubResource( 2 )
nodes/fragment/5/position = Vector2( -380, 340 )
nodes/fragment/6/node = SubResource( 3 )
nodes/fragment/6/position = Vector2( -120, 260 )
nodes/fragment/8/node = SubResource( 4 )
nodes/fragment/8/position = Vector2( -540, 180 )
nodes/fragment/11/node = SubResource( 1 )
nodes/fragment/11/position = Vector2( -340, 180 )
nodes/fragment/connections = PoolIntArray( 5, 0, 6, 2, 6, 0, 0, 0, 8, 0, 11, 0, 11, 0, 6, 0, 11, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=17]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=18]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="ShaderMaterial" id=19]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/WhiteAlpha = 0.0

[sub_resource type="Animation" id=20]
length = 11.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("finalBossFightShip:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 11 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 392.335, 1888.3 ), Vector2( 392.335, 3324.59 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=21]
length = 30.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("finalBossFightShip:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 392.335, -2644.76 ), Vector2( 392.335, 1888.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 7 )

[node name="FinalBossDecisionWave" instance=ExtResource( 1 )]
script = ExtResource( 6 )
waveAdvanceCondition = "other"
dialogueRequest = "level10Truth"

[node name="finalBossFightShip" parent="." index="0" instance=ExtResource( 2 )]

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret" index="1"]
material = SubResource( 6 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret2" index="1"]
material = SubResource( 7 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret3" index="1"]
material = SubResource( 8 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret4" index="1"]
material = SubResource( 9 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret5" index="1"]
material = SubResource( 10 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret6" index="1"]
material = SubResource( 11 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret7" index="1"]
material = SubResource( 12 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret8" index="1"]
material = SubResource( 13 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret9" index="1"]
material = SubResource( 14 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret10" index="1"]
material = SubResource( 15 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret11" index="1"]
material = SubResource( 16 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret12" index="1"]
material = SubResource( 17 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret13" index="1"]
material = SubResource( 18 )

[node name="Sprite" parent="finalBossFightShip/Turrets/Turret14" index="1"]
material = SubResource( 19 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
autoplay = "default"
anims/cleanup = SubResource( 20 )
anims/default = SubResource( 21 )

[node name="Node2D" type="Node2D" parent="." index="2"]
modulate = Color( 1, 1, 1, 0 )

[node name="OptionA" type="Label" parent="Node2D" index="0"]
margin_left = 59.1793
margin_top = 31.8759
margin_right = 245.179
margin_bottom = 49.8759
custom_fonts/font = SubResource( 22 )
text = "Fight Commander"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecisionZone" parent="Node2D" index="1" instance=ExtResource( 4 )]
position = Vector2( 159.561, 140.666 )
rotation = 1.57079
scale = Vector2( 1.875, 1.875 )

[node name="OptionB" type="Label" parent="Node2D" index="2"]
margin_left = 608.551
margin_top = 31.8759
margin_right = 794.551
margin_bottom = 49.8759
custom_fonts/font = SubResource( 22 )
text = "Fight Federation"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecisionZone2" parent="Node2D" index="3" instance=ExtResource( 4 )]
position = Vector2( 708.932, 140.666 )
rotation = 1.57079
scale = Vector2( 1.875, 1.875 )

[node name="Tween" type="Tween" parent="." index="3"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="activated" from="Node2D/DecisionZone" to="." method="_on_DecisionZone_activated"]
[connection signal="activated" from="Node2D/DecisionZone2" to="." method="_on_DecisionZone2_activated"]

[editable path="finalBossFightShip"]
[editable path="finalBossFightShip/Turrets/Turret"]
[editable path="finalBossFightShip/Turrets/Turret2"]
[editable path="finalBossFightShip/Turrets/Turret3"]
[editable path="finalBossFightShip/Turrets/Turret4"]
[editable path="finalBossFightShip/Turrets/Turret5"]
[editable path="finalBossFightShip/Turrets/Turret6"]
[editable path="finalBossFightShip/Turrets/Turret7"]
[editable path="finalBossFightShip/Turrets/Turret8"]
[editable path="finalBossFightShip/Turrets/Turret9"]
[editable path="finalBossFightShip/Turrets/Turret10"]
[editable path="finalBossFightShip/Turrets/Turret11"]
[editable path="finalBossFightShip/Turrets/Turret12"]
[editable path="finalBossFightShip/Turrets/Turret13"]
[editable path="finalBossFightShip/Turrets/Turret14"]
